fixed alignment on nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 .container {
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: center;
   background: #1d1d1f;
-  padding: 1%;
+  padding: 0.3%;
   opacity: 0.9;
 }
 
